Fix returning icon names containing dots

FIXED-IN: 4.8.0
BUG: 241712